Fixes to last PR
Add scrollbar width back
Rename a font weight variable
Replace user image placeholder with better generated letter element

refs TS-1866 TS-1863

--- a/apps/cyberstorm-nextjs/styles/Home.module.css
+++ b/apps/cyberstorm-nextjs/styles/Home.module.css
@@ -61,7 +61,7 @@
 
 .card h2 {
   margin-bottom: 0.7rem;
-  font-weight: var(--font-weight-bolder);
+  font-weight: var(--font-weight-semibold);
 }
 
 .card p {
