--- a/packages/cyberstorm/src/components/Layout/LoginLayout/BetaLoginLayout.module.css
+++ b/packages/cyberstorm/src/components/Layout/LoginLayout/BetaLoginLayout.module.css
@@ -183,7 +183,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--gap--8);
-  font-weight: var(--font-weight-bolder);
+  font-weight: var(--font-weight-semibold);
   font-size: var(--font-size--l);
   line-height: var(--line-height--l);
 }
